обновление requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,2 @@
-# Привет, я хочу написать очень простого чатбота на flask, интерфейс болжен быть буквально как у твоего чата, но даже проще, только место куда вводить сообщение с кнопкой отправки, как у тебя, белый фон и отправка сообщений, весь интерфейс пока можно оставить посередине экрана и можно справа сверху сделать кнопку "стрелочки вниз", функционал которой я сделаю потом, сейчас мне нужна только регистрация, отправка сообщений и сохранение их в базу данных
 flask>=3.1.0
+Flask-SocketIO>=5.5.0
